fix some row alignment issues in pr_visualization.html

--- a/static/css/pr_scatter.css
+++ b/static/css/pr_scatter.css
@@ -81,7 +81,7 @@ td.hover {
 }
 
 .cluster-list {
-  height: 480px;
+  height: 520px;
   overflow-y: auto;
 }
 
